--- a/android/build.gradle
+++ b/android/build.gradle
@@ -126,5 +126,6 @@ dependencies {
   // noinspection GradleDynamicVersion
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'im.crisp:crisp-sdk:2.0.0beta1'
+    implementation 'im.crisp:crisp-sdk:1.0.7'
+
 }
