--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^2.0.0",
-    "@react-native/babel-preset": "0.73.21",
+    "metro-react-native-babel-preset": "0.64.0",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@types/jest": "^26.0.0",
