--- a/package.json
+++ b/package.json
@@ -53,27 +53,25 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
-    "metro-react-native-babel-preset": "0.64.0",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
     "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "0.62.13",
     "auto-changelog": "^2.2.0",
     "commitlint": "^11.0.0",
-    "eslint": "^8.19.0",
-    "prettier": "3.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "expo-module-scripts": "^3.4.1",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-builder-bob": "^0.23.2",
+    "prettier": "^2.0.5",
+    "react": "17.0.1",
+    "react-native": "0.64.1",
+    "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
-    "typescript": "5.0.4"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
