--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-native-crisp-chat-sdk",
-  "version": "0.14.0",
+  "version": "0.8.0",
   "description": "React-Native bridge for Crisp chat iOS and Android SDK&#39;s",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
+  "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -19,22 +19,17 @@
     "!ios/build",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__",
-    "plugin/build",
-    "app.plugin.js"
+    "!**/__mocks__"
   ],
   "scripts": {
     "test": "jest",
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepare": "yarn build:plugin && bob build",
+    "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods",
-    "test:plugin": "expo-module test plugin",
-    "build:plugin": "tsc --build plugin",
-    "lint:plugin": "eslint plugin/src/*"
+    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
     "react-native",
@@ -74,16 +69,14 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-native": "^0.73.6",
-    "react-dom": "^18.2.0"
+    "react": "*",
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
-      "<rootDir>/lib/",
-      "fixtures"
+      "<rootDir>/lib/"
     ]
   },
   "husky": {
@@ -139,8 +132,7 @@
   },
   "eslintIgnore": [
     "node_modules/",
-    "lib/",
-    "build"
+    "lib/"
   ],
   "prettier": {
     "quoteProps": "consistent",
@@ -162,8 +154,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "@expo/config-plugins": "^4.1.5"
   }
 }
